--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
-  redis:
-    image: redis:7-alpine
+  valkey:
+    image: valkey/valkey:7.2-alpine
     ports:
       - "16379:6379"
 
